[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Magic/SpellBar/Spell/Spell.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Magic/SpellBar/Hotbar/Spell_Hotbar.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Magic/SpellBar/SpellBar.gd" type="Script" id=3]

[node name="SpellBar" type="TextureRect"]
margin_right = 290.0
margin_bottom = 180.0
script = ExtResource( 3 )

[node name="DropBox" type="ScrollContainer" parent="."]
margin_left = 5.0
margin_top = 67.0
margin_right = 285.0
margin_bottom = 198.0

[node name="Grid" type="GridContainer" parent="DropBox"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/vseparation = 5
custom_constants/hseparation = 5
columns = 6

[node name="Spell" parent="DropBox/Grid" instance=ExtResource( 1 )]
margin_right = 40.0
margin_bottom = 40.0

[node name="Spell_Hotbar" parent="." instance=ExtResource( 2 )]
margin_left = 5.0
margin_top = 5.0

[connection signal="OnExpand" from="Spell_Hotbar" to="." method="_on_Spell_Hotbar_OnExpand"]
